--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "imageboard",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://v4nilla1ce.github.io/imageboard",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -25,6 +26,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.3.3",
